# Radiometer

./: .gitignore  Makefile  README.md  RadioPi.c  RadioPi.c.before_serPIGPIO  RadioPi.h  RadioPi.sh  RadioPiExp.sh  RadioPi_NoSerial.c  RadioPi_NoSerial.h  Serial_Tmp.h  Teensy Cmod A7 Pin Map.numbers  hold.c  hold.h
Data/: ERR.txt
DiffuserCap/: Diffuser Adapterr v1.step  Diffuser Adapterr v3.step  Diffuser Adapterr v4.step  Diffuser Adapterr v5.step
FPGA/RAD_Counter/: .#rad_clock.vhd  RAD_Counter.xdc  RAD_Testbench.vhd  RAD_counter.vhd  accumulator.vhd  clk_12_250.vhd  clk_250_450.vhd  clockify.vhd  counter_gray4.vhd  counter_gray5.vhd  fast_counter.vhd  fast_integrator.vhd  gray_to_bin_4.vhd  gray_to_bin_5.vhd  output_mux.vhd  prescaler.vhd  prescaler_3.vhd  rad_clock.vhd  rad_clock_IP.vhd  sampler_gray4.vhd  sampler_gray5.vhd  subsample.vhd
FPGA/RAD_Counter_SERDES/: .#count_ones_and_edges.vhd  RAD_Clocks.vhd  RAD_counter.vhd  RAD_counter_tb.vhd  clk_12_to_240.vhd  count_ones_and_edges.vhd  oversample.vhd  snapshot_deltas.vhd  total_counters.vhd
FPGA/Spare_Parts/: RAD_counter.ucf  clk_12_250.vhd  fast_integrator.vhd  prescaler.vhd  rad_clock.vhd
FPGA/fast_freq_counter/: fast_freq_counter.ucf  fast_freq_counter.vhd  sampler.vhd  tb_fast_freq_counter.vhd
Pi_Old/: RadioPi.c  Serial_Tmp.c
TiltTest/: TiltTest.c  TiltTest.h
archive/: JunSu.c
code/Teensy/TestEstimator/: CMakeLists.txt  TestEstimator.cpp  TestEstimator.h
docs/: Cost of Samplers.numbers  Radiometer_Instructions_V1_Bigelow_RadioPi.rtf  Sensitivity_Old.txt  Teensy Cmod A7 Pin Map.numbers
(+100 files in other folders)
